20241106 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpay/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpay/webapp/i18n/i18n_ja.properties
@@ -3,15 +3,15 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=有償支給品の純額計算
+appTitle=有償支給期首金額アップロード
 
 #YDES: Application description
-appDescription=有償支給品の純額計算
+appDescription=有償支給期首金額アップロード
 #XTIT: Main view title
-title=有償支給品の純額計算
+title=有償支給期首金額アップロード
 
 #XFLD,57
-flpTitle=有償支給品の純額計算
+flpTitle=有償支給期首金額アップロード
 
 #Texts for Main.view.xml
 templateText=テンプレートダウンロード
