--- a/fico-s4apps01/paidpaydocument/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaydocument/webapp/i18n/i18n_ja.properties
@@ -11,7 +11,7 @@ appDescription=有償支給品の純額処理
 title=有償支給品の純額処理
 
 #XFLD,48
-flpTitle=PaidPay Document
+flpTitle=有償支給品の純額処理
 
 #Texts for Main.view.xml
 Option1=売上/仕入純額処理
