翻译加去除按键

--- a/mm-s4apps01/podataanalysis/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/podataanalysis/webapp/i18n/i18n.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=PO Data Analysis
+appTitle=PO状況分析レポート
 
 #YDES: Application description
-appDescription=PO Data Analysis
+appDescription=PO状況分析レポート
 
 #XFLD,48
-flpTitle=PO Data Analysis
+flpTitle=PO状況分析レポート
