20241106 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
@@ -66,6 +66,7 @@ NetPrice3=円換算後単価(PO)
 NetAmount3=円換算後税込金額（檢收）
 VAT2=円換算後税額（検収）
 AccountingDocument=参照伝票
-DeliveryDate=納期回答
+DeliveryDate=回答納期
+DlvQty=回答数量
 PurgDocPriceDate=価格設定日付
 IsCompletelyDelivered=納入完了PO排除
