BI003 set selection default values

--- a/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
@@ -48,8 +48,8 @@ dataSavedFailed=データ保存失敗.
 noDataChanged=データ変更なし.
 
 #selection
-FiscalYear=年
-FiscalMonth=月
+FiscalYear=会計年度
+FiscalMonth=会計期間
 
 
 # Report 002
