--- a/mm-s4apps01/poposting/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/poposting/webapp/i18n/i18n_ja.properties
@@ -3,15 +3,15 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=PO一括入庫
+appTitle=購買発注入庫実績一括登録
 
 #YDES: Application description
-appDescription=PO一括入庫
+appDescription=購買発注入庫実績一括登録
 #XTIT: Main view title
-title=PO一括入庫
+title=購買発注入庫実績一括登録
 
 #XFLD,45
-flpTitle=PO一括入庫
+flpTitle=購買発注入庫実績一括登録
 
 #Texts for Main.view.xml
 templateText=テンプレートダウンロード
