FICO-020 連結勘定とG/L勘定マッピング関係登録 FLP

--- a/fico-s4apps01/zbindglupload/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zbindglupload/webapp/i18n/i18n_en.properties
@@ -68,13 +68,13 @@ chartofaccounts1=Chart of Accounts
  
 
 #XFLD,120: Label for a column title
-createdOn=登録日付
+createdOn=created On
 
 #XFLD,120: Label for a column title
-changedOn=変更者
+changedOn=changed On
 
 #XFLD,120: Label for a column title
-changedBy=変更日付
+changedBy=changed By
 
 #XFLD,120: Label for a column title
 glAccountLongName=G/L Account Name
