--- a/fico-s4apps01/zbindglupload/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zbindglupload/webapp/i18n/i18n_ja.properties
@@ -71,10 +71,10 @@ chartofaccounts1=勘定コード表
 createdOn=登録日付
 
 #XFLD,120: Label for a column title
-changedOn=変更者
+changedOn=変更日付
 
 #XFLD,120: Label for a column title
-changedBy=変更日付
+changedBy=変更者
 
 #XFLD,120: Label for a column title
 glAccountLongName=G/L勘定テキスト
