FICO-018継続年齢アップデート FLP

--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
@@ -69,4 +69,8 @@ calendarYear1=会計年度
 calendarMonth1=会計期間
 
 #XFLD,120: Label for a column title
-ledger=元帐
+ledger=元帳
+Ledger=元帳
+
+#XFLD,30
+flpTitle=継続年齢アップデート
