ysy 20241107 add flp

--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
@@ -72,3 +72,7 @@ calendarMonth1=Calendar Month
 #XFLD,120: Label for a column title
 ledger=Ledger
 Ledger=Ledger
+
+#XFLD,120: Label for a filter field
+companyCode=CompanyCode
+CompanyCode=CompanyCode
