--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n_ja.properties
@@ -71,3 +71,7 @@ calendarMonth1=会計期間
 #XFLD,120: Label for a column title
 ledger=元帳
 Ledger=元帳
+
+#XFLD,120: Label for a filter field
+companyCode=会社コード
+CompanyCode=会社コード
