--- a/fico-s4apps01/agencypurchasingn/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/agencypurchasingn/webapp/i18n/i18n_en.properties
@@ -3,13 +3,13 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=FICO-028代理購買仕訳生成
+appTitle=Agent Purchase Journal Entry Generation
 
 #YDES: Application description
-appDescription=An SAP Fiori application.
+appDescription=Agent Purchase Journal Entry Generation
 
 #XFLD,24
-flpTitle=Itemdata
+flpTitle=Agent Purchase Journal Entry Generation
 
 Posting=Posting
 
