--- a/fico-s4apps01/agencypurchasingn/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/agencypurchasingn/webapp/i18n/i18n_ja.properties
@@ -3,13 +3,13 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=FICO-028代理購買仕訳生成
+appTitle=代理購買仕訳生成
 
 #YDES: Application description
-appDescription=An SAP Fiori application.
+appDescription=代理購買仕訳生成
 
 #XFLD,24
-flpTitle=Itemdata
+flpTitle=代理購買仕訳生成
 
 Posting=転記
 
