PP-003 部品使用先一覧レポート 20241107

--- a/pp-s4apps01/zcomponentusagelist/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zcomponentusagelist/webapp/i18n/i18n.properties
@@ -28,6 +28,7 @@ BillOfMaterialItemUnit=単位
 BillOfMaterialVariant=代替BOM
 AlternativeItemStrategy=方針
 AlternativeItemPriority=優先順位
+BOMSubItemInstallationPoint=副明細設定ポイント
 NoDisplayNonProduct=削除フラグ製品対象外
 DisplayPurchasingInfo=購買情報表示
 
