20241107 購買申請登録とファイル添付 bug 修改

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -28,6 +28,10 @@ UploadView.checkBtn = チェック
 UploadView.saveBtn = 実行
 #XBUT,16: DisplayView.CreateBtn
 DisplayView.CreateBtn = PO連携
+#XBUT,11: ChangeView.InSave
+ChangeView.InSave = 保存
+#XBUT,29: UploadView.DownloadBtn
+UploadView.DownloadBtn = EXCEL出力
 
 tableHeaderTitle=購買申請
 objectPageTitle=購買申請
@@ -74,11 +78,18 @@ CustomerRec=客先回収
 AssetOri=資産元
 MemoText=コメント
 BuyPurpoose=購入目的
+ApproveStatus=ステータス
 IsLink=連携要否
 PurchaseOrder=購買伝票番号
 PurchaseOrderItem=明細
 Kyoten=拠点
 CreatedAt=登録日付
+IsApprove=承認要否
+ApplyDate=申請日付
+ApplyTime=申請時間
 
-#XBUT,11: ChangeView.InSave
-ChangeView.InSave = 保存
+Status1Text=登録済
+Status2Text=承認中
+Status3Text=承認済
+Status4Text=送信済
+
