MM-020 Add return material document infomation

--- a/mm-s4apps01/poposting/webapp/i18n/i18n_en.properties
+++ b/mm-s4apps01/poposting/webapp/i18n/i18n_en.properties
@@ -26,6 +26,9 @@ logInfo={0} pieces of data, {1} were successfully imported, and {2} failed to be
 #Table Column
 Status=Status
 Message=Message
+MaterialDocument=Material Document
+MaterialDocumentYear=Material Document Year
+MaterialDocumentItem=Material Document Item
 Material=Material
 Plant=Plant
 DocumentDate=Document Date
