PP‐016 ピッキングリスト作成 单测对应

--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -58,6 +58,7 @@ LastChangedByUser=Last Changed By
 
 ManufacturingOrder=Mfg. Order
 Product=Mfg. Order Product
+ProductName=Mfg. Order Product Name
 OrderRequiredQuantity=Order Required Quantity
 ResidueStockQuantity=Residue Stock Quantity
 ShortQuantity=Short Quantity
@@ -72,6 +73,7 @@ Save=Save
 Display=Display
 ShowDetails=Production Order Details
 CloseBtn=Close
+Download=Download
 
 # Message
 Results=Results
@@ -88,3 +90,7 @@ Message4=No. {0} the transfer quantity is less than the total short fall quantit
 Message5=No. {0} the transfer quantity has exceeded the total short fall quantity.
 Message6=No. {0} please enter the {1}.
 Message7=Only one reservation can be processed.
+
+StandardListFileName=Picking List_Registration
+CustomListFileName=Picking List
+DetailsFileName=Picking List_Production Order Details
