--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
@@ -58,6 +58,7 @@ LastChangedByUser=変更者
 
 ManufacturingOrder=製造指図
 Product=指図品目番号
+ProductName=指図品目名
 OrderRequiredQuantity=指図所要数量
 ResidueStockQuantity=残利用可能在庫(To)
 ShortQuantity=欠品数量
@@ -71,7 +72,8 @@ Edit=変更
 Save=保存
 Display=展示
 ShowDetails=製造指図詳細
-CloseBtn=いいえ
+CloseBtn=中止
+Download=ダウンロード
 
 # Message
 Results=結果
@@ -88,3 +90,7 @@ Message4=行 {0} の移動数量は欠品数量より少ないです。
 Message5=行 {0} の移動数量は欠品数量を超えました。
 Message6=行 {0} {1}を入力してください。
 Message7=入出庫予定処理件数は1件しか処理できません。
+
+StandardListFileName=ピッキングリスト_登録一覧
+CustomListFileName=ピッキングリスト一覧
+DetailsFileName=ピッキングリスト_製造指図明細
