--- a/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
@@ -66,7 +66,6 @@ SupplierMaterialGroup = 価格コントロール区分
 SupplierCertOriginCountry = 原産国
 SupplierCertOriginRegion = 地域(都道府県)
 IncotermsClassification = 基軸通貨
-UMCJPPurchasingPrice = UMCJP Purchasing Price
 DeliveryLT = Delivery LT (+45 days)
 PlusDay = Plus day
 PurchasingInfoRecordCategory = 購買情報区分
@@ -75,3 +74,9 @@ ValuationClass = 評価クラス
 SupplierSubrange = 供給者部門
 SupplierSubrangeName = 供給者部門のテキスト
 loginflag = 供給元一覧登録有無
+Rate = Rate
+UMCJPPurchasingPrice = UMCJP's Purchasing Price
+
+
+#XFLD,60
+flpTitle=pur info master list
