--- a/sd-s4apps01/invoiceprint/webapp/i18n/i18n_ja.properties
+++ b/sd-s4apps01/invoiceprint/webapp/i18n/i18n_ja.properties
@@ -11,17 +11,19 @@ appDescription=請求書出力
 #XBUT,25
 print=印刷
 reprint=訂正印刷
-delete=納品書No.クリア
+delete=請求書No.
+
+bConfirm=確認
+bCancel=キャンセル
+DialogTitle=日付
+printDate=日付
 
 #XMSG
 msgInconsistencies=得意先または出荷ポイントが一緒ではなく、まとめて印刷することはできません。
-msgDeleteSuccessed=納品書No.クリア成功
-
-#XCOL: Custom action text
-reprint1=reprint
+msgDeleteSuccessed=請求書No.クリア成功
 
 #XFLD,120: Label for a column title
-price=Price
+price=単価
 
 #XFLD,120: Label for a column title
 amountexcludtax=金額(税抜き)
@@ -31,3 +33,18 @@ quantity=数量
 
 #XFLD,120: Label for a column title
 taxRate=税率
+
+#XFLD,120: Label for a column title
+overallStatus=会計へリリース
+
+#XFLD,120: Label for a column title
+product=品目コード
+
+#XFLD,120: Label for a column title
+invoiceno=請求書No.
+
+#XFLD,120: Label for a column title
+netamounttax10=NetAmountTax10
+
+#XFLD,120: Label for a column title
+customerMaterial=摘要(品目番号等)
