--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
@@ -12,3 +12,49 @@ title=Inventory Requirement Report
 
 #XFLD,84
 flpTitle=Inventory Requirement Report
+
+Plant=Plant
+MRPArea=MRP Area
+MRPController=MRP Controller
+PurchasingGroup=Purchasing Group
+ProductGroup=Product Group
+ProductType=Product Type
+Product=Product
+Supplier=Supplier
+SupplierMaterialNumber=Supplier Mat. No.
+DisplayUnit=Display Unit
+PeriodEndDate=Period End Date
+SelectionRule=Selection Rule
+DisplayDimension=Display Dimension
+ShowInformation=Show Information
+ShowDetailLines=Show Detail Lines
+ShowDEMAND=Show DEMAND
+
+Yes=Yes
+No=No
+UnitDay=Day
+UnitWeek=Week
+UnitMonth=Month
+Horizontal=Horizontal
+Vertical=Vertical
+
+Results=Results
+
+MRPControllerName=MRP Controller Name
+ABCIndicator=ABC Indicator
+ExternalProductGroup=Ext. Product Group
+LotSizingProcedure=Lot Sizing Procedure
+ProductDescription=Product Desc.
+IndustryStandardName=Industry Std. Name
+EOLGroup=EOL Group
+IsMainProduct=Is Main Product
+SupplierName=Supplier Name
+ProductManufacturerNumber=Manufacturer Product Code
+ManufacturerNumber=Manufacturer
+MaterialPlannedDeliveryDurn=Planned Delivery Durn
+MinimumPurchaseOrderQty=Minimum PO Qty
+StandardPrice=Standard Price
+SupplierPrice=Supplier Price
+SupplierCertoriginCountry=Country of Origin
+
+Classification=Classification
