--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
@@ -12,3 +12,49 @@ title=在庫所要一覧レポート
 
 #XFLD,84
 flpTitle=在庫所要一覧レポート
+
+Plant=プラント
+MRPArea=MRPエリア
+MRPController=MRP管理者
+PurchasingGroup=購買グループ
+ProductGroup=品目グループ
+ProductType=品目タイプ
+Product=品目
+Supplier=仕入先
+SupplierMaterialNumber=仕入先品目
+DisplayUnit=表示単位
+PeriodEndDate=期間終了日
+SelectionRule=範囲選択
+DisplayDimension=結果表示
+ShowInformation=購買関連情報表示
+ShowDetailLines=購買関連明細行表示
+ShowDEMAND=DEMAND明細表示
+
+Yes=はい
+No=いいえ
+UnitDay=日単位
+UnitWeek=週単位
+UnitMonth=月単位
+Horizontal=横表示
+Vertical=縦表示
+
+Results=結果
+
+MRPControllerName=MRP管理者名称
+ABCIndicator=ABC区分
+ExternalProductGroup=外部品目グループ
+LotSizingProcedure=ロット纏め方式
+ProductDescription=品目テキスト
+IndustryStandardName=標準テキスト
+EOLGroup=EOLグループ
+IsMainProduct=主品目
+SupplierName=仕入先名称
+ProductManufacturerNumber=製造者製品コード
+ManufacturerNumber=製造業者
+MaterialPlannedDeliveryDurn=納入予定日数
+MinimumPurchaseOrderQty=最低発注数量
+SupplierPrice=最新仕入単価
+StandardPrice=標準単価
+SupplierCertoriginCountry=原産国
+
+Classification=分類
