BI-003 Set month to multiselect, add logic of percentageofap

--- a/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
@@ -86,7 +86,7 @@ Customer=受注伝票得意先
 
 # Report 003
 InitialMaterial=イニシャル品目
-MaterialType=品目タイプ
+MaterialType=品目グループ
 AccountingDocument=会計伝票
 AccountingDocumentItem=会計伝票明細
 GLAccount=勘定科目
