20241109 FICO-007 有償支給純額計算処理

--- a/fico-s4apps01/paidpaylist/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/paidpaylist/webapp/i18n/i18n.properties
@@ -25,8 +25,11 @@ CompanyCode=Company Code
 FiscalYear=Fiscal Year
 Period=Period
 ProfitCenter=Profit Center
+ProfitCenterName=Profit Center Name
 BusinessPartner=Business Partner
+BusinessPartnerName=Business Partner Name
 PurchasingGroup=Purchasing Group
+PurchasingGroupName=Purchasing Group Name
 PreStockAmt=Pre. Stock Amt.
 BegPurGrpAmt=Beg. PurGrp. Amt.
 BegChgMaterialAmt=Beg. Chg. Material Amt.
