--- a/fico-s4apps01/paidpaylist/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/paidpaylist/webapp/i18n/i18n_ja.properties
@@ -24,8 +24,11 @@ CompanyCode=会社コード
 FiscalYear=会計年度
 Period=会計期間
 ProfitCenter=利益センタ
+ProfitCenterName=利益センタの名前
 BusinessPartner=得意先コード
+BusinessPartnerName=得意先コードの名前
 PurchasingGroup=購買グループ
+PurchasingGroupName=購買グループの名前
 PreStockAmt=前期末在庫金額
 BegPurGrpAmt=期首購買グループ仕入れ金額
 BegChgMaterialAmt=期首有償支給品仕入れ金額
