--- a/sd-s4apps01/zsalesdocumentlist/webapp/i18n/i18n_en.properties
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/i18n/i18n_en.properties
@@ -87,15 +87,15 @@ ConditionCurrencyZPGP=条件通貨(ZPGP)
 ConditionAmountZPGP=売上総利益(ZPGP)										
 YY1_ItemRemarks_1_SDI=備考(明細)									
 DeliveredQtyInOrderQtyUnit=出荷済数量									
-OpenReqdDelivQtyInOrdQtyUnit=出荷残数									
+OpenConfdDelivQtyInOrdQtyUnit=出荷残数									
 ComplDeliveredQtyInBaseUnit=転記済数量																
 NoComplDeliveredQtyInBaseUnit=転記残数																	
 InternalTansferQtyInBaseUnit=内部移転済数量									
 NoInternalTansferQtyInBaseUnit=内部移転残数									
 EnternalTansferQtyInBaseUnit=外部移転済数量									
 NoEnternalTansferQtyInBaseUnit=外部移転残数									
-BillingQuantity=請求済数量									
-NoBillingQuantity=未請求数											
+BillingQuantityInBaseUnit=請求済数量									
+NoBillingQuantityInBaseUnit=未請求数											
 CreationDate=受注登録日付(ヘッダ)										
 CreationDateItem=受注明細登録日付										
 LastChangeDate=受注明細変更日付										
