MM-018 購買情報マスタ一覧

--- a/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
@@ -3,13 +3,13 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Pur Info Master List
+appTitle=購買情報マスタ一覧
 Result=購買情報マスタ一覧
 
 #YDES: Application description
-appDescription=An SAP Fiori application.
+appDescription=購買情報マスタ一覧
 #XTIT: Main view title
-title=Pur Info Master List
+title=購買情報マスタ一覧
 
 #Check Box
 ZTYPE1=削除済を含み
@@ -79,4 +79,4 @@ UMCJPPurchasingPrice = UMCJP's Purchasing Price
 
 
 #XFLD,60
-flpTitle=pur info master list
+flpTitle=購買情報マスタ一覧
