PP‐016 ピッキングリスト作成

--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
@@ -28,7 +28,7 @@ Material=SAP部品番号
 MaterialName=部品名
 StorageLocationTo=保管場所(To)
 StorageLocationToName=保管場所(To)名
-TotalRequiredQuantity=合計所要数量
+TotalRequiredQuantity=合計正味所要数量
 TotalShortFallQuantity=合計欠品数量
 StorageLocationToStock=保管場所(To)利用可能在庫
 M_CARD_Quantity=M-CARD数量(UWMS)
@@ -59,7 +59,7 @@ LastChangedByUser=変更者
 ManufacturingOrder=製造指図
 Product=指図品目番号
 ProductName=指図品目名
-OrderRequiredQuantity=指図所要数量
+OrderRequiredQuantity=指図正味所要数量
 ResidueStockQuantity=残利用可能在庫(To)
 ShortQuantity=欠品数量
 ConfirmedAvailableQuantity=ATP数量
