--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -28,7 +28,7 @@ Material=Material
 MaterialName=Material Name
 StorageLocationTo=Storage Loc. To
 StorageLocationToName=Storage Loc. To Name
-TotalRequiredQuantity=Total Required Quantity
+TotalRequiredQuantity=Total Net Required Quantity
 TotalShortFallQuantity=Total Short Fall Quantity
 StorageLocationToStock=Storage Loc. To Stock
 M_CARD_Quantity=M_CARD Quantity
@@ -59,7 +59,7 @@ LastChangedByUser=Last Changed By
 ManufacturingOrder=Mfg. Order
 Product=Mfg. Order Product
 ProductName=Mfg. Order Product Name
-OrderRequiredQuantity=Order Required Quantity
+OrderRequiredQuantity=Order Net Required Quantity
 ResidueStockQuantity=Residue Stock Quantity
 ShortQuantity=Short Quantity
 ConfirmedAvailableQuantity=ATP Quantity
