継続年齢アップデート一括登録修改

--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
@@ -78,3 +78,12 @@ flpTitle=継続年齢アップデート
 #XFLD,120: Label for a filter field
 companyCode=会社コード
 CompanyCode=会社コード
+
+#XFLD,120: Label for a column title
+companyName=会社コードテキスト
+
+#XFLD,120: Label for a column title
+plantName=プラントテキスト
+
+#XFLD,120: Label for a column title
+productDescription=品目テキスト
