--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
@@ -76,3 +76,12 @@ Ledger=Ledger
 #XFLD,120: Label for a filter field
 companyCode=CompanyCode
 CompanyCode=CompanyCode
+
+#XFLD,120: Label for a column title
+companyName=Company Name
+
+#XFLD,120: Label for a column title
+plantName=Plant Name
+
+#XFLD,120: Label for a column title
+productDescription=Product Description
