--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n_ja.properties
@@ -75,3 +75,12 @@ Ledger=元帳
 #XFLD,120: Label for a filter field
 companyCode=会社コード
 CompanyCode=会社コード
+
+#XFLD,120: Label for a column title
+companyName=会社コードテキスト
+
+#XFLD,120: Label for a column title
+plantName=プラントテキスト
+
+#XFLD,120: Label for a column title
+productDescription=品目テキスト
