20241112 工程別加工費 修改

--- a/fico-s4apps01/zmfgorder/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zmfgorder/webapp/i18n/i18n.properties
@@ -22,3 +22,9 @@ key3=工程別加工費
 
 #XFLD,36
 flpTitle={{flpTitle}}
+
+#XFLD,120: Label for a column title
+costratescalefactor1=計画原価比率スケールファクタ
+
+#XFLD,120: Label for a column title
+costratescalefactor2=実際原価比率スケールファクタ
