--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
@@ -56,5 +56,19 @@ MinimumPurchaseOrderQty=Minimum PO Qty
 StandardPrice=Standard Price
 SupplierPrice=Supplier Price
 SupplierCertoriginCountry=Country of Origin
-
+ShipmentNoticeQty=Shipment Notice Quantity
+OutOfStockDate=Out of Stock Date
+SafetyStock=Safety Stock
 Classification=Classification
+PastQty=Past Quantity
+FutureQty=Future Quantity
+TotalQty=Total Quantity
+
+MRPElements=MRP Elements
+Date=Date
+RequiredQty=Required Quantity
+StockQty=Stock Quantity
+SuppliedQty=Supplied Quantity
+AvailableStock=Available Stock
+RemainingQty=Remaining Quantity
+Status=Status
