--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
@@ -56,5 +56,19 @@ MinimumPurchaseOrderQty=最低発注数量
 SupplierPrice=最新仕入単価
 StandardPrice=標準単価
 SupplierCertoriginCountry=原産国
-
+ShipmentNoticeQty=出荷通知数量
+OutOfStockDate=欠品日付
+SafetyStock=安全在庫
 Classification=分類
+PastQty=過去
+FutureQty=未来
+TotalQty=合計
+
+MRPElements=MRP要素
+Date=日付
+RequiredQty=所要数量
+StockQty=在庫数量
+SuppliedQty=供給数量
+AvailableStock=利用可能在庫
+RemainingQty=在庫残数
+Status=ステータス
