--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
@@ -58,6 +58,8 @@ SupplierPrice=Supplier Price
 SupplierCertoriginCountry=Country of Origin
 ShipmentNoticeQty=Shipment Notice Quantity
 OutOfStockDate=Out of Stock Date
+FinalProduct=Final Product
+HighLevelMaterial=High Level Material
 SafetyStock=Safety Stock
 Classification=Classification
 PastQty=Past Quantity
