--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
@@ -58,6 +58,8 @@ StandardPrice=標準単価
 SupplierCertoriginCountry=原産国
 ShipmentNoticeQty=出荷通知数量
 OutOfStockDate=欠品日付
+FinalProduct=最終製品
+HighLevelMaterial=上位品目
 SafetyStock=安全在庫
 Classification=分類
 PastQty=過去
