20241113 購買申請登録とファイル添付 bug修改

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -87,6 +87,8 @@ CreatedAt=登録日付
 IsApprove=承認要否
 ApplyDate=申請日付
 ApplyTime=申請時間
+SupplierMat=仕入先品目コード
+PolinkBy=PO連携担当者
 
 Status1Text=登録済
 Status2Text=承認中
