update pp-031 by skq 20241114

--- a/pp-s4apps01/zledplannedordercomponent/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zledplannedordercomponent/webapp/i18n/i18n.properties
@@ -17,3 +17,5 @@ Accept=提案受入
 #Text
 selectOperation=機能操作を選択してください。
 confirmMessage={0}しますか？
+confirmMessage1=不足品目があるので、提案が受入できない。
+ProcessingCompleted=処理が完了しました。
