PP-025 製造指図と受注の割当管理 单测对应

--- a/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n.properties
@@ -13,7 +13,7 @@ flpTitle=製造指図と受注の割当管理
 
 # Button
 SaveBtn=保存
-CloseBtn=いいえ
+CloseBtn=中止
 
 AssignSalesOrder=受注割当
 ChangeAssignQty=割当数変更
@@ -46,3 +46,4 @@ Message1=割当可能数が0なので、受注割当不可。
 Message2=受注 {0} {1} の割当数が未割当数より多くなる。
 Message3=割当合計数 {0} が割当可能数 {1} より多くなる。
 Message4=受注 {0} {1} の割当数が明細数量より多くなる。
+Message5=割当合計数 {0} ≠ 割当可能数 {1}、割当数を確認してください。
