--- a/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_en.properties
@@ -46,3 +46,4 @@ Message1=The available assign quantity is 0, so [Assign Sales Order] is not poss
 Message2=Assign quantity of sales order {0} {1} is greater unassign quantity.
 Message3=Sum assign quantity {0} is greater than available assign quantity {1}.
 Message4=Assign quantity of sales order {0} {1} is greater item quantity.
+Message5=Sum assign quantity {0} is not equal to the available assign quantity {1}, please check.
