BI004 逆ザヤ防止分析

--- a/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
@@ -16,13 +16,13 @@ flpTitle=逆ザヤ防止分析
 COSTANALYSISCOM=部品費
 COSTANALYSISPROCESS=加工費
 Companycode=会社コード
-zYear=年
-zMonth=月
+zYear=会計年度
+zMonth=会計期間
 Material=部品
 Product=製品
 Customer=得意先
 
-YearMonth=年月									
+YearMonth=会計年月
 Companycode=会社コード									
 CompanycodeText=会社コードテキスト									
 Plant=プラント									
