BC Apps translation

--- a/bc-s4apps01/zcommonconf/webapp/i18n/i18n_en.properties
+++ b/bc-s4apps01/zcommonconf/webapp/i18n/i18n_en.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=共通定数テーブル
+appTitle=Common Configuration
 
 #YDES: Application description
-appDescription=共通定数テーブル
+appDescription=Common Configuration
 
 #XFLD,60
-flpTitle=共通定数テーブル
+flpTitle=Common Configuration
