--- a/bc-s4apps01/zdtimpconf/webapp/i18n/i18n_en.properties
+++ b/bc-s4apps01/zdtimpconf/webapp/i18n/i18n_en.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=バッチインポート設定
+appTitle=Batch Import Configuration
 
 #YDES: Application description
-appDescription=バッチインポート設定
+appDescription=Batch Import Configuration
 
 #XFLD,46.5
-flpTitle=バッチインポート設定
+flpTitle=Batch Import Configuration
