--- a/bc-s4apps01/zwfapprovalconfigmanage/webapp/i18n/i18n.properties
+++ b/bc-s4apps01/zwfapprovalconfigmanage/webapp/i18n/i18n.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Workflow Approval Configuration Management
+appTitle=ワークフロー承認設定
 
 #YDES: Application description
-appDescription=Workflow Approval Configuration Management
+appDescription=ワークフロー承認設定
 
 #XFLD,63
-flpTitle=Workflow Approval Configuration Management
+flpTitle=ワークフロー承認設定
