--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
@@ -74,3 +74,11 @@ SuppliedQty=Supplied Quantity
 AvailableStock=Available Stock
 RemainingQty=Remaining Quantity
 Status=Status
+
+Balance=BALANCE
+OrderQuantity=Order Quantity
+RequestDate=Request Date
+OrderDate=Order Date
+
+#Message
+NoData=There is no data.
