--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
@@ -74,3 +74,11 @@ SuppliedQty=供給数量
 AvailableStock=利用可能在庫
 RemainingQty=在庫残数
 Status=ステータス
+
+Balance=BALANCE
+OrderQuantity=発注数
+RequestDate=要求日
+OrderDate=発注日
+
+#Message
+NoData=対象データが無いです。
