SD-026 受注管理レポート 20241117

--- a/sd-s4apps01/zsalesdocumentlist/webapp/i18n/i18n_en.properties
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/i18n/i18n_en.properties
@@ -92,8 +92,8 @@ ComplDeliveredQtyInBaseUnit=転記済数量
 NoComplDeliveredQtyInBaseUnit=転記残数																	
 InternalTansferQtyInBaseUnit=内部移転済数量									
 NoInternalTansferQtyInBaseUnit=内部移転残数									
-EnternalTansferQtyInBaseUnit=外部移転済数量									
-NoEnternalTansferQtyInBaseUnit=外部移転残数									
+ExternalTansferQtyInBaseUnit=外部移転済数量									
+NoExternalTansferQtyInBaseUnit=外部移転残数									
 BillingQuantityInBaseUnit=請求済数量									
 NoBillingQuantityInBaseUnit=未請求数											
 CreationDate=受注登録日付(ヘッダ)										
@@ -103,7 +103,10 @@ CreatedByUser=受注明細登録者
 SalesDocumentRjcnReason=拒否理由										
 SalesDocumentRjcnReasonName=拒否理由テキスト										
 YY1_SalesDocType_SDH=受注タイプ(old)										
-YY1_ManagementNo_SDI=回収管理番号										
+YY1_ManagementNo_SDI=回収管理No.（イニシャル）
+YY1_ManagementNo_1_SDI=回収管理No.（スポットバイ）		
+YY1_ManagementNo_2_SDI=回収管理No.（特別輸送費）		
+YY1_ManagementNo_3_SDI=回収管理No.（在庫廃棄ロス）													
 RequestedDeliveryDate=指定納入日
 SalesDocumentDate=伝票日付   
 Indicator1=DN未発行
