20241118 TWX21検収データ取込み機能 bug修改

--- a/sd-s4apps01/salesacceptdn/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesacceptdn/webapp/i18n/i18n.properties
@@ -27,7 +27,7 @@ Result=結果
 Message=メッセージ
 PurchaseFrom=発注者コード
 SoldTo=受注者コード
-Product=発注者品名コード
+ProductByPurchase=発注者品名コード
 AcceptDate=検収日
 AcceptQuantity=検収数量
 
