20241118 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
@@ -54,7 +54,7 @@ MaterialDocumentHeaderText=伝票ヘッダ Text
 FiscalYear=会計年度
 DueCalculationBaseDate=支払基準日
 InvoicingParty=請求元
-Quantity2=检收数量
+Quantity2=検収数量
 InvoiceAmtInPurOrdTransacCrcy=請求書金額（税抜）
 VAT1=消費税額
 InvoiceAmount=請求書金額（税込）
@@ -63,7 +63,7 @@ InvoiceDocumentDate=請求書伝票の伝票日付
 ExchangeRate=換算レート
 NetPrice2=取引通貨単価
 NetPrice3=円換算後単価(PO)
-NetAmount3=円換算後税込金額（檢收）
+NetAmount3=円換算後税込金額（検収）
 VAT2=円換算後税額（検収）
 AccountingDocument=参照伝票
 DeliveryDate=回答納期
