--- a/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
@@ -1,4 +1,4 @@
-# This is the resource bundle for recoverymanagement
+# This is the resource bundle for bi.recoverymanagement
 
 #Texts for manifest.json
 
