--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -10,3 +10,91 @@ appDescription=購買申請承認
 
 #XFLD,30
 flpTitle=購買申請承認
+ 
+ 
+
+Result1=購買申請アップロード
+Result2=購買申請一覧照会
+
+templateText=テンプレートダウンロード
+uploadText=ファイルアップロード
+result=結果
+logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
+#XMSG Your changes have been saved.
+msgSaveSuccessed=変更内容は保存されました
+msgDuplicate=登録粒度不一致データがあります，チェックしてください。
+msgNoSelect=まずデータを選択してください
+
+#XBUT,12: UploadView.checkBtn
+UploadView.checkBtn = チェック
+#XBUT,12: UploadView.saveBtn
+UploadView.saveBtn = 実行
+#XBUT,16: DisplayView.CreateBtn
+DisplayView.CreateBtn = PO連携
+#XBUT,11: ChangeView.InSave
+ChangeView.InSave = 保存
+#XBUT,29: UploadView.DownloadBtn
+UploadView.DownloadBtn = EXCEL出力
+
+tableHeaderTitle=購買申請
+objectPageTitle=購買申請
+attachment=添付ファイル
+
+#UploadView
+Status=ステータス
+Result=結果
+Message=メッセージ
+ApplyDepart=依頼部署			
+PrNo=購買申請番号
+PrItem=明細
+PrType=購買申請タイプ
+OrderType=発注タイプ
+Supplier=仕入先コード
+CompanyCode=会社コード
+PurchaseOrg=購買組織
+PurchaseGrp=購買グループ
+Plant=プラント
+Currency=通貨コード
+ItemCategory=明細カテゴリ
+AccountType=勘定設定カテゴリ
+MatID=発注品番
+MatDesc=テキスト（短）
+MaterialGroup=品目グループ
+Quantity=購買発注量
+Unit=発注単位
+Price=正味発注価格
+UnitPrice=価格単位
+DeliveryDate=納入日付
+Location=保管場所
+ReturnItem=返品明細
+Free=無償
+GlAccount=G/L勘定
+CostCenter=原価センタ
+WbsElemnt=WBS要素
+AssetNo=資産番号
+Tax=税コード
+ItemText=項目テキスト
+PrBy=購買依頼者
+TrackNo=追跡番号
+Ean=EAN/UPC
+CustomerRec=客先回収
+AssetOri=資産元
+MemoText=コメント
+BuyPurpoose=購入目的
+ApproveStatus=ステータス
+IsLink=連携要否
+PurchaseOrder=購買伝票番号
+PurchaseOrderItem=明細
+Kyoten=拠点
+CreatedAt=登録日付
+IsApprove=承認要否
+ApplyDate=申請日付
+ApplyTime=申請時間
+SupplierMat=仕入先品目コード
+PolinkBy=PO連携担当者
+
+Status1Text=登録済
+Status2Text=承認中
+Status3Text=承認済
+Status4Text=送信済
+
