--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -98,3 +98,20 @@ Status2Text=承認中
 Status3Text=承認済
 Status4Text=送信済
 
+amountsumpage=合計
+detailpage=明細
+historypage=履歴
+AmountSum=税抜き合計金額
+idButtonAccept=承認
+idButtonReject=却下
+apply_date=申請日
+EmailAddress=Email 
+InstanceId=WF NO
+ButtonAccept=承認
+ButtonReject=却下
+ApplicationId=ApplicationId
+DialogTitle=承認コメント
+bConfirm=確認
+bCancel=キャンセル
+DialogTitleReject=却下コメント
+
