PP-031製造指図一括発行 20241119

--- a/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n.properties
@@ -8,5 +8,11 @@ appTitle=製造指図一括発行
 #YDES: Application description
 appDescription=製造指図一括発行
 
-#XFLD,66
+#XFLD,36
 flpTitle=製造指図一括発行
+
+Release=製造指図発行
+CloseBtn=Close
+
+#Text
+confirmMessage=Would you like to {0}?
