--- a/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n_ja.properties
@@ -10,7 +10,8 @@ appDescription=製造指図一括発行
 
 #XFLD,36
 flpTitle=製造指図一括発行
-Release=製造指図発行
 
+Release=製造指図発行
+CloseBtn=閉じる
 #Text
 confirmMessage={0}しますか？
