--- a/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_en.properties
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_en.properties
@@ -50,3 +50,4 @@ Difference=Price Difference
 PurchaseOrderStr=PO Item
 PriceDate=Price Date
 ExcludeDeliveredPO=Exclude Delivered PO
+PurchaseOrderDate=Purchase Order Date
