--- a/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_ja.properties
@@ -17,8 +17,8 @@ flpTitle=購買単価差異レポート
 Results=結果
 PurchaseOrder=購買伝票番号
 PurchaseOrderItem=購買伝票の明細番号
-PurchasingGroup=購買Gコード
-PurchasingGroupName=購買G名
+PurchasingGroup=購買 Gコード
+PurchasingGroupName=購買 G名
 Supplier=仕入先コード
 OrganizationBPName1=仕入先名称
 DocumentCurrency=現PO通貨
@@ -50,3 +50,4 @@ Difference=単価差異
 PurchaseOrderStr=購買発注番号明細
 PriceDate=価格決定日付(マスタ)
 ExcludeDeliveredPO=納入完了PO排除
+PurchaseOrderDate=PO発行日
