--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -114,4 +114,7 @@ DialogTitle=承認コメント
 bConfirm=確認
 bCancel=キャンセル
 DialogTitleReject=却下コメント
+amount1=正味額
 
+AcceptPlaceholder=コメントの追加（オプション）
+RejectPlaceholder=コメントの追加（オプション）
