20241120 購買申請登録とファイル添付 bug修改

--- a/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/uploadpurchasereq/webapp/i18n/i18n.properties
@@ -28,6 +28,8 @@ UploadView.checkBtn = チェック
 UploadView.saveBtn = 実行
 #XBUT,16: DisplayView.CreateBtn
 DisplayView.CreateBtn = PO連携
+DisplayView.Application = 承認送信
+DisplayView.Revoke = 承認撤回
 #XBUT,11: ChangeView.InSave
 ChangeView.InSave = 保存
 #XBUT,29: UploadView.DownloadBtn
@@ -36,6 +38,7 @@ UploadView.DownloadBtn = EXCEL出力
 tableHeaderTitle=購買申請
 objectPageTitle=購買申請
 attachment=添付ファイル
+history=履歴
 
 #UploadView
 Status=ステータス
