--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_en.properties
@@ -39,6 +39,10 @@ Horizontal=Horizontal
 Vertical=Vertical
 
 Results=Results
+Summary=Summary
+PurchaseList=Purchase List
+CloseBtn=Close
+Download=Download
 
 MRPControllerName=MRP Controller Name
 ABCIndicator=ABC Indicator
@@ -82,3 +86,4 @@ OrderDate=Order Date
 
 #Message
 NoData=There is no data.
+PeriodEndDateIsPast=The end date of the period cannot be in the past.
