--- a/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zinventoryrequirement/webapp/i18n/i18n_ja.properties
@@ -39,6 +39,10 @@ Horizontal=横表示
 Vertical=縦表示
 
 Results=結果
+Summary=Summary
+PurchaseList=Purchase List
+CloseBtn=中止
+Download=ダウンロード
 
 MRPControllerName=MRP管理者名称
 ABCIndicator=ABC区分
@@ -77,8 +81,9 @@ Status=ステータス
 
 Balance=BALANCE
 OrderQuantity=発注数
-RequestDate=要求日
+RequestDate=纳入日付
 OrderDate=発注日
 
 #Message
 NoData=対象データが無いです。
+PeriodEndDateIsPast=期間終了日が過去の日付ではならない。
