FICO-028 NEW 代理購買仕訳生成

--- a/fico-s4apps01/zagencypurchasingn/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zagencypurchasingn/webapp/i18n/i18n_en.properties
@@ -16,4 +16,4 @@ Posting=Posting
 #Text
 selectOperation=Please select a function operation.
 confirmMessage=Would you like to {0}?
-ProcessingCompleted=Processing Completed
+ProcessingCompleted=Processing Completed.
