BI004 逆ザヤ防止分析

--- a/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
@@ -53,6 +53,9 @@ ActualPrice_AI=実際加工費（AI）
 ActualPrice_FAT=実際加工費（FAT）									
 Currency=通貨									
 BillingQuantity=製品出荷数量									
-BillingQuantityUnit=数量単位									
+BillingQuantityUnit=数量単位	
+profitcenter=利益センタ
+profitcentername=利益センタテキスト
+yieldqty=製品生産入庫数量
 
 
