PP‐016 ピッキングリスト作成 单测对应

--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -90,6 +90,7 @@ Message4=No. {0} the transfer quantity is less than the total short fall quantit
 Message5=No. {0} the transfer quantity has exceeded the total short fall quantity.
 Message6=No. {0} please enter the {1}.
 Message7=Only one reservation can be processed.
+Message8=Reservation {0} Item {1} is not waiting to be posted.
 
 StandardListFileName=Picking List_Registration
 CustomListFileName=Picking List
