1118 app description change

--- a/mm-s4apps01/physicalinventoryupload/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/physicalinventoryupload/webapp/i18n/i18n_ja.properties
@@ -3,15 +3,14 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=棚卸検数結果登録
+appTitle=棚卸検数結果一括登録
 
 #YDES: Application description
-appDescription=棚卸検数結果登録
+appDescription=棚卸検数結果一括登録
 #XTIT: Main view title
-title=棚卸検数結果登録
-
+title=棚卸検数結果一括登録
 #XFLD,45
-flpTitle=棚卸検数結果登録
+flpTitle=棚卸検数結果一括登録
 
 #Texts for Main.view.xml
 templateText=テンプレートダウンロード
