20241125 pr workflow 改邮件

--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -113,8 +113,13 @@ ApplicationId=ApplicationId
 DialogTitle=承認コメント
 bConfirm=確認
 bCancel=キャンセル
-DialogTitleReject=却下コメント
+DialogTitleReject=却下c'c'c
 amount1=正味額
 
 AcceptPlaceholder=コメントの追加（オプション）
 RejectPlaceholder=コメントの追加（オプション）
+
+PrType1Text=購入依頼書
+PrType2Text=物品請求書
+PrType3Text=製作指示書
+ 
