Update App Title

--- a/bc-s4apps01/zdtimpconf/webapp/i18n/i18n.properties
+++ b/bc-s4apps01/zdtimpconf/webapp/i18n/i18n.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=バッチインポート設定
+appTitle=一括アップロード機能管理
 
 #YDES: Application description
-appDescription=バッチインポート設定
+appDescription=一括アップロード機能管理
 
 #XFLD,46.5
-flpTitle=バッチインポート設定
+flpTitle=一括アップロード機能管理
