--- a/bc-s4apps01/zdtimpfiles/webapp/i18n/i18n.properties
+++ b/bc-s4apps01/zdtimpfiles/webapp/i18n/i18n.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=ファイルの一括インポート
+appTitle=一括アップロード機能実行
 
 #YDES: Application description
-appDescription=ファイルの一括インポート
+appDescription=一括アップロード機能実行
 
 #XFLD,69
-flpTitle=ファイルの一括インポート
+flpTitle=一括アップロード機能実行
