--- a/bc-s4apps01/zwfapprovalconfigmanage/webapp/i18n/i18n.properties
+++ b/bc-s4apps01/zwfapprovalconfigmanage/webapp/i18n/i18n.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=ワークフロー承認設定
+appTitle=ワークフロー承認管理
 
 #YDES: Application description
-appDescription=ワークフロー承認設定
+appDescription=ワークフロー承認管理
 
 #XFLD,63
-flpTitle=ワークフロー承認設定
+flpTitle=ワークフロー承認管理
