20241126 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
@@ -10,6 +10,7 @@ appDescription=An SAP Fiori application.
 
 PurchaseOrder=Purchase Order
 PurchaseOrderItem=PO Item
+PurchaseOrderItemUniqueID=PO Item
 MaterialDocument=MaterialDocument
 MaterialDocumentItem=Matdoc Item
 SupplierInvoice=Supplier Invoice
