--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
@@ -10,6 +10,7 @@ appDescription=受入実績レポート
 
 PurchaseOrder=購買発注番号
 PurchaseOrderItem=購買発注番号明細
+PurchaseOrderItemUniqueID=購買発注番号明細
 MaterialDocument=入出庫伝票
 MaterialDocumentItem=入出庫伝票明細
 SupplierInvoice=請求書伝票番号
