20241126 MM-031 受入実績レポート

--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n.properties
@@ -68,3 +68,5 @@ VAT2=VAT2
 AccountingDocument=AccountingDocument
 DeliveryDate=Delivery Date
 DlvQty=Confirm Qty
+MaterialGroup=Material Group
+MaterialGroupName=Material Group Name
