--- a/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/poacceptance/webapp/i18n/i18n_ja.properties
@@ -71,3 +71,5 @@ DeliveryDate=回答納期
 DlvQty=回答数量
 PurgDocPriceDate=価格設定日付
 IsCompletelyDelivered=納入完了PO排除
+MaterialGroup=品目 Group
+MaterialGroupName=品目 Group名
