--- a/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/zprworkflow/webapp/i18n/i18n.properties
@@ -113,7 +113,7 @@ ApplicationId=ApplicationId
 DialogTitle=承認コメント
 bConfirm=確認
 bCancel=キャンセル
-DialogTitleReject=却下c'c'c
+DialogTitleReject=却下コメント
 amount1=正味額
 
 AcceptPlaceholder=コメントの追加（オプション）
