20241128 出荷伝票一括登録 first commit

--- a/sd-s4apps01/batchcreationdn/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/batchcreationdn/webapp/i18n/i18n.properties
@@ -11,3 +11,10 @@ appDescription=出荷伝票一括登録
 title=出荷伝票一括登録
 #XBUT,4: MainView.DNCreate
 MainView.DNCreate = DN作成
+
+tableHeaderTitle=受注一覧
+
+msgNoSelect=明細行を選択してください
+msgConfirmation=選択された{0}受注明細の出荷伝票を登録しますか?
+msgUnspecifiedQuantity=今回納品数が指定されていません。そのまま実行すると、受注残数を全部出荷します。
+msgUnspecifiedStorageLocation=今回保管場所が指定されていません。そのまま実行すると、出荷伝票明細の保管場所がブランクです。
