販売計画一覧

--- a/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/purinfomasterlist/webapp/i18n/i18n.properties
@@ -44,7 +44,7 @@ OwnInventoryManagedProduct = 内部品目コード
 ProductOID = 旧品目コード
 BaseUnit = 基本数量単位
 ManufacturerNumber = Manufacturer code
-OrganizationBPName1 = Name of manufacturer
+# OrganizationBPName1 = Name of manufacturer
 ProductManufacturerNumber = MPN
 standardpurchaseorderquantity = Unit Price
 Taxprice = Tax price
@@ -52,11 +52,11 @@ UnitPrice_plnt = 標準原価
 UnitPrice_standard = 標準原価(unit price)
 PriceUnitQty = 価格単位
 Currency_standard = Standard currency
-orderpriceunittoorderunitnmrtr = Rate
+# orderpriceunittoorderunitnmrtr = Rate
 latestoffer = Latest offer
 SupplierIsFixed = 固定仕入先
 MaterialPlannedDeliveryDurn = 納入予定日数
-ShippingConditionName = NCNR・cancelルール
+ShippingConditionName = NCNR・cancel ルール
 IndustryStandardName = 標準テキスト
 TaxCode = 税コード
 MinimumPurchaseOrderQuantity = 最低発注数量
