--- a/bi-s4apps01/longtermforcast/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/longtermforcast/webapp/i18n/i18n.properties
@@ -13,8 +13,10 @@ title=Long-Term Forcast
 #XFLD,57
 flpTitle=Long-Term Forcast
 
-fiscalYear=Fiscal Year
-fiscalMonth=Fiscal Period
+fiscalYear=Base Fiscal Year
+fiscalMonth=Base Fiscal Period
+forcastYear=Forcast Fiscal Year
+forcastMonth=Forcast Fiscal Period
 yearMonth=Year Month
 type=Type
 company=Company
