--- a/bi-s4apps01/longtermforcast/webapp/i18n/i18n_ja.properties
+++ b/bi-s4apps01/longtermforcast/webapp/i18n/i18n_ja.properties
@@ -11,8 +11,10 @@ appDescription=長期滞留在庫予測
 #XFLD,57
 flpTitle=長期滞留在庫予測
 
-fiscalYear=会計年度
-fiscalMonth=会計期間
+fiscalYear=実行会計年度
+fiscalMonth=実行会計期間
+forcastYear=予測年度
+forcastMonth=予測期間
 yearMonth=年月
 type=タイプ
 company=会社コード
