20241202 期初库存加字段

--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n_ja.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n_ja.properties
@@ -84,3 +84,9 @@ plantName=プラントテキスト
 
 #XFLD,120: Label for a column title
 productDescription=品目テキスト
+
+#XFLD,120: Label for a column title
+inventorytype=カテゴリ
+
+#XFLD,120: Label for a column title
+baseUnitOfMeasure=基本単位
