--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n.properties
@@ -87,3 +87,9 @@ plantName=プラントテキスト
 
 #XFLD,120: Label for a column title
 productDescription=品目テキスト
+
+#XFLD,120: Label for a column title
+inventorytype=カテゴリ
+
+#XFLD,120: Label for a column title
+baseUnitOfMeasure=Base Unit of Measure
