--- a/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
+++ b/fico-s4apps01/zstockageupload/webapp/i18n/i18n_en.properties
@@ -85,3 +85,9 @@ plantName=Plant Name
 
 #XFLD,120: Label for a column title
 productDescription=Product Description
+
+#XFLD,120: Label for a column title
+inventorytype=Inventory Type
+
+#XFLD,120: Label for a column title
+baseUnitOfMeasure=Base Unit of Measure
