--- a/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesdocumentreport/webapp/i18n/i18n.properties
@@ -39,3 +39,11 @@ GrossProfit=売上総利益(単価)
 ContributionProfitTotal=貢献利益
 GrossProfitTotal=売上総利益
 salesplanamountindspcrcy=QTY
+
+DataError=データエラー
+
+ConditionRateValueLabel=単価
+salesplanamountindspcrcyLabel=QTY
+SalesAmountLabel=売上
+ContributionProfitTotalLabel=貢献利益
+GrossProfitTotalLabel=売上総利益
