FICO-019＆026_長期滞在＆低価法レポート 20241203

--- a/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zinventoryaging/webapp/i18n/i18n.properties
@@ -15,7 +15,7 @@ CompanyCode=会社コード
 Plant=プラント                 
 FiscalYear=会計年度          
 FiscalPeriod=会計期間        
-product=品目             
+Product=品目             
 ProductDescription=品目テキスト  
 ProductType=品目タイプ         
 ProductTypeName=品目タイプテキスト     
@@ -108,6 +108,7 @@ AmountMonth35=35ヶ月-金額
 QuantityMonth36=36ヶ月-数量
 AmountMonth36=36ヶ月-金額
 Ledger=元帳
+KeyDate=重要な日付
 ReCalculateIndicator=再計算	
 
 Results=長期滞在＆低価法レポート
