20241204 出荷伝票一括登録 bug修改

--- a/sd-s4apps01/batchcreationdn/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/batchcreationdn/webapp/i18n/i18n.properties
@@ -18,3 +18,9 @@ msgNoSelect=明細行を選択してください
 msgConfirmation=選択された{0}受注明細の出荷伝票を登録しますか?
 msgUnspecifiedQuantity=今回納品数が指定されていません。そのまま実行すると、受注残数を全部出荷します。
 msgUnspecifiedStorageLocation=今回保管場所が指定されていません。そのまま実行すると、出荷伝票明細の保管場所がブランクです。
+
+MainView.BatchInput=日付と保管場所更新
+DialogTitle=日付と保管場所更新
+bStorageLoc=保管場所更新
+bGoodsIssueDate=日付更新
+bClose=閉じる
